# frdm-k64f-projects

./: README.md
blinky/: blinky.c  board.c  sys_tick.c
blinky/armgcc/: CMakeLists.txt  build_debug.sh  build_release.sh
blinky_freertos/: board.c  clock_config.c  freertos_blinky.c
blinky_freertos/armgcc/: CMakeLists.txt
event_dispatcher/: app_common.h  clock_config.c  event_list.h  main.c  mainloop_timer.c  pin_mux.c  sys_tick.h
event_dispatcher/armgcc/: CMakeLists.txt
shell/: .board.c.swp  .pin_mux.c.swp  .shell_if_uart.c.swp  blinky.c  board.c  circ_buffer.c  circ_buffer.h  event_dispatcher.c  event_list.h  main.c  pin_mux.c  shell.c  shell.h  shell_if_uart.c  shell_if_uart.h  shell_if_usb.c  shell_if_usb.h  sys_tick.c
shell/armgcc/: .clean.sh.swp  CMakeLists.txt  build_debug.sh  build_release.sh
shell/usb_dev/: usb_device_cdc_acm.c  virtual_com.h
shell_freertos/: FreeRTOSConfig.h  app_common.h  app_list.h  board.c  main.c  shell.c  shell.h  shell_if_uart.c
shell_freertos/armgcc/: CMakeLists.txt
